--- a/2/index.html
+++ b/2/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico?v=3">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body class="bg-gradient">
     <div class="container text-center py-5">
@@ -18,10 +18,9 @@
 
         <!-- Social Media and Payment Icons -->
         <div class="d-flex justify-content-center gap-3 mb-4">
-            <a href="https://wa.me/5521972280397" target="_blank" class="text-success" title="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>
-            <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-pink-600" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="text-warning" title="Contribuir"><i class="fas fa-qrcode fa-2x cursor-pointer"></i></a>
-            <a href="#" onclick="shareSite()" class="btn btn-sm btn-outline-lilac small" title="Compartilhar"><i class="fas fa-share-alt"></i></a>
+            <a href="https://wa.me/21972280397" target="_blank" class="text-success"><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-pink-600"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="text-warning"><i class="fas fa-qrcode fa-2x cursor-pointer"></i></a>
         </div>
 
         <!-- Button to Show Pronto Socorro Espiritual -->
@@ -32,14 +31,17 @@
             <h2 class="h4 fw-bold text-purple-dark mb-3">Pronto Socorro Espiritual</h2>
             <p class="text-muted mb-2">Como você está agora?</p>
             <input type="range" class="form-range" min="0" max="100" value="50" id="mood-slider">
-            <div class="d-flex justify-content-between text-muted small slider-labels"><span>Desequilíbrio</span><span>Paz</span></div>
+            <div class="d-flex justify-content-between text-muted small">
+                <span>Extrema Angústia</span>
+                <span>Euforia</span>
+            </div>
             <textarea class="form-control mt-3" rows="4" placeholder="Escreva algo sobre como você está se sentindo..." id="message-input"></textarea>
             <button class="btn btn-purple-dark mt-3" onclick="sendToWhatsApp()">Enviar para Vanidoya</button>
         </div>
 
         <!-- Discreet Contact Link -->
         <div class="position-fixed bottom-0 end-0 p-3">
-            <a href="https://wa.me/5521970059636?text=Adorei!%20Quero%20um%20site%20assim%20também!" target="_blank" class="btn btn-sm btn-outline-lilac small" title="Feito por Criador"><i class="fas fa-code"></i></a>
+            <a href="https://wa.me/21972280397?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20seus%20serviços!" target="_blank" class="text-lilac text-decoration-underline small">Entre em contato para serviços espirituais</a>
         </div>
 
         <!-- Payment Modal -->
