--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanidoya - Espiritualidade e Conexão</title>
+    <title>Vani D'Oyá - Espiritualidade e Conexão</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="styles.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <div class="container text-center py-5">
         <!-- Profile Section -->
         <img src="foto-vanidoya.jpeg" alt="Foto de @sacerdotisa_vanidoya" class="rounded-circle img-fluid mb-4" style="max-width: 150px; height: auto;">
-        <h1 class="display-5 fw-bold text-purple-dark">Sacerdotisa Vanidoya</h1>
+        <h1 class="display-5 fw-bold text-purple-dark">Sacerdotisa Vani D'Oyá</h1>
         <p class="lead mb-4 text-lilac">Guia Espiritual | Conexão e Transformação</p>
 
         <!-- Social Media and Payment Icons -->
@@ -34,7 +34,7 @@
             <input type="range" class="form-range" min="0" max="100" value="50" id="mood-slider">
             <div class="d-flex justify-content-between text-muted small slider-labels"><span>Desequilíbrio</span><span>Paz</span></div>
             <textarea class="form-control mt-3" rows="4" placeholder="Escreva algo sobre como você está se sentindo..." id="message-input"></textarea>
-            <button class="btn btn-purple-dark mt-3" onclick="sendToWhatsApp()">Enviar para Vanidoya</button>
+            <button class="btn btn-purple-dark mt-3" onclick="sendToWhatsApp()">Enviar para Vani</button>
         </div>
 
         <!-- Discreet Contact Link -->
