--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
         <!-- Social Media and Payment Icons -->
         <div class="d-flex justify-content-center gap-3 mb-4">
-            <a href="https://wa.me/5521972280397" target="_blank" class="text-success" title="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>
-            <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-pink-600" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+<a href="https://wa.me/5521972280397?text=Oi!%20Tudo%20bem?%20Quero%20conversar%20sobre" target="_blank" class="text-success" title="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>            <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-pink-600" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="text-warning" title="Contribuir"><i class="fas fa-qrcode fa-2x cursor-pointer"></i></a>
             <a href="#" onclick="shareSite()" class="btn btn-sm btn-outline-lilac small" title="Compartilhar"><i class="fas fa-share-alt"></i></a>
         </div>
