--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="styles.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico?v=3">
+    <style>
+        .text-green-600 {
+            color: #2f855a; /* Verde xamânico inspirado na natureza */
+        }
+    </style>
 </head>
 <body class="bg-gradient">
     <div class="container text-center py-5 position-relative">
@@ -29,6 +34,7 @@
             <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-pink-600" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="text-warning" title="Contribuir"><i class="fas fa-qrcode fa-2x cursor-pointer"></i></a>
             <a href="#" onclick="shareSite()" class="btn btn-sm btn-outline-lilac small" title="Compartilhar"><i class="fas fa-share-alt"></i></a>
+            <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w/edit?usp=drivesdk" target="_blank" class="text-green-600" title="Medicinas da Floresta" id="forest-medicine-link"><i class="fas fa-leaf fa-2x"></i></a>
         </div>
 
         <!-- Button to Show Pronto Socorro Espiritual -->
