--- a/index.html
+++ b/index.html
@@ -1,138 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vani D'Oyá - Espiritualidade e Conexão</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico?v=3">
-    <style>
-        .text-light-blue {
-            color: #87CEEB;
-        }
-        .text-gold {
-            color: #D4AF37;
-        }
-        .text-green-600 {
-            color: #2f855a;
-        }
-        .bg-light-blue {
-            background-color: #87CEEB;
-        }
-        .btn-light-blue {
-            background-color: #87CEEB;
-            border-color: #87CEEB;
-            color: #fff;
-        }
-        .btn-light-blue:hover {
-            background-color: #72bcd4;
-            border-color: #72bcd4;
-        }
-        .btn-outline-light-blue {
-            border-color: #87CEEB;
-            color: #87CEEB;
-        }
-        .btn-outline-light-blue:hover {
-            background-color: #87CEEB;
-            color: #fff;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vani D'Oyá - Conexão Espiritual</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-white">
-    <div class="container text-center py-5 position-relative">
-        <!-- Language Selector -->
-        <div class="position-absolute top-0 end-0 p-2">
-            <span class="me-2" onclick="setLanguage('pt')"><img src="https://flagcdn.com/16x12/br.png" alt="Português" title="Português" style="cursor: pointer;"></span>
-            <span class="me-2" onclick="setLanguage('en')"><img src="https://flagcdn.com/16x12/us.png" alt="English" title="English" style="cursor: pointer;"></span>
-            <span onclick="setLanguage('es')"><img src="https://flagcdn.com/16x12/es.png" alt="Español" title="Español" style="cursor: pointer;"></span>
-        </div>
+<body>
+  <div class="container text-center py-5">
+    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width: 140px; border: 3px solid #87CEEB;">
+    <h1 class="brand-color">Sacerdotisa Vani D'Oyá</h1>
+    <p class="lead">Guia Espiritual | Conexão e Transformação</p>
 
-        <!-- Profile Section -->
-        <img src="foto-vanidoya.jpeg" alt="Foto de @sacerdotisa_vanidoya" class="rounded-circle img-fluid mb-4 border border-3 border-light-blue" style="max-width: 150px; height: auto;">
-        <h1 class="display-5 fw-bold text-light-blue" id="profile-title">Sacerdotisa Vani D'Oyá</h1>
-        <p class="lead mb-4 text-light-blue" id="profile-subtitle">Guia Espiritual | Conexão e Transformação</p>
-
-        <!-- Social Media and Payment Icons -->
-        <div class="d-flex justify-content-center gap-3 mb-4">
-            <a href="https://wa.me/5521972280397?text=Oi!%20Tudo%20bem?%20Quero%20conversar%20sobre" target="_blank" class="text-gold" title="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>
-            <a href="https://www.instagram.com/sacerdotisa_vanidoya" target="_blank" class="text-gold" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="text-gold" title="Contribuir"><i class="fas fa-qrcode fa-2x cursor-pointer"></i></a>
-            <a href="#" onclick="shareSite()" class="text-gold" title="Compartilhar" id="share-button"><i class="fas fa-share-alt fa-2x cursor-pointer"></i></a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#forestMedicineModal" class="text-green-600" title="Medicinas da Floresta" id="forest-medicine-link"><i class="fas fa-leaf fa-2x cursor-pointer"></i></a>
-        </div>
-
-        <!-- Button to Show Pronto Socorro Espiritual -->
-        <button class="btn btn-light-blue mb-4" onclick="showSpiritualEmergency()" id="spiritual-emergency-button">Pronto Socorro Espiritual</button>
-
-        <!-- Pronto Socorro Espiritual (Hidden Initially) -->
-        <div id="spiritual-emergency" class="bg-white p-4 rounded shadow mb-4 mx-auto d-none border border-light-blue" style="max-width: 500px;">
-            <h2 class="h4 fw-bold text-light-blue mb-3" id="emergency-title">Pronto Socorro Espiritual</h2>
-            <p class="text-muted mb-2" id="emergency-subtitle">Como você está agora?</p>
-            <input type="range" class="form-range" min="0" max="100" value="50" id="mood-slider" oninput="updateMoodState()">
-            <div class="d-flex justify-content-between text-muted small slider-labels">
-                <span id="slider-desequilibrio">Desequilíbrio</span>
-                <span id="slider-paz">Paz</span>
-            </div>
-            <p class="text-muted small mt-2" id="mood-state">Neutro</p>
-            <textarea class="form-control mt-3" rows="4" id="message-input" placeholder="Compartilhe seus sentimentos"></textarea>
-            <button class="btn btn-light-blue mt-3" onclick="sendToWhatsApp()" id="whatsapp-button">Enviar para Vani</button>
-        </div>
-
-        <!-- Discreet Contact Link -->
-        <div class="position-fixed bottom-0 end-0 p-3">
-            <a href="https://www.instagram.com/criador" target="_blank" class="btn btn-sm btn-outline-light-blue small" title="Feito por Criador"><i class="fas fa-code"></i></a>
-        </div>
-
-        <!-- Payment Modal -->
-        <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body text-center">
-                        <h5 class="contribua-title text-light-blue mb-4" id="modal-title">Contribua:</h5>
-                        <div class="d-flex justify-content-center gap-4">
-                            <div>
-                                <a href="#" onclick="copyToClipboard(PIX_CODE)" class="d-block cursor-pointer">
-                                    <img src="pix-qrcode.png" alt="PIX QR Code" class="img-fluid" style="max-width: 150px; height: auto;">
-                                </a>
-                                <img src="pix-logo.png" alt="PIX Logo" class="img-fluid mt-2" style="max-width: 60px; height: auto;">
-                                <p class="small text-muted mt-1" id="pix-instruction">Clique para copiar o código PIX</p>
-                            </div>
-                            <div>
-                                <a href="#" onclick="copyToClipboard(LIGHTNING_CODE)" class="d-block cursor-pointer">
-                                    <img src="lb-qrcode.jpeg" alt="Lightning QR Code" class="img-fluid" style="max-width: 150px; height: auto;">
-                                </a>
-                                <span class="lightning-symbol mt-2 d-block text-gold" style="font-size: 36px; line-height: 36px;">⚡</span>
-                                <p class="small text-muted mt-1" id="lightning-instruction">Clique para copiar o código Lightning</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Forest Medicine Modal -->
-        <div class="modal fade" id="forestMedicineModal" tabindex="-1" aria-labelledby="forestMedicineModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title text-light-blue" id="forestMedicineModalLabel">Medicinas da Floresta</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body text-center">
-                        <p class="text-muted" id="forest-medicine-text">As medicinas da floresta são um presente para todos, mas nem todos estão prontos para elas. Quer descobrir se esse é o seu momento?</p>
-                        <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w/edit?usp=drivesdk" target="_blank" class="btn btn-light-blue mt-3" id="forest-medicine-button">Descubra Agora</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="mb-4">
+      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397', '_blank')"><i class="fab fa-whatsapp fa-2x"></i></a>
+      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn"><i class="fab fa-instagram fa-2x mx-3"></i></a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn"><i class="fas fa-share-alt fa-2x"></i></a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn"><i class="fas fa-leaf fa-2x ms-3"></i></a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn"><i class="fas fa-qrcode fa-2x ms-3"></i></a>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <button class="btn btn-vanidoya mb-4" onclick="document.getElementById('emergency').classList.toggle('d-none')">Pronto Socorro Espiritual</button>
+
+    <div id="emergency" class="d-none mx-auto p-4 border rounded shadow-sm" style="max-width: 500px;">
+      <h4 class="brand-color">Como você está agora?</h4>
+      <input type="range" min="0" max="100" value="50" id="mood" class="form-range">
+      <p id="mood-state" class="text-muted">Neutro</p>
+      <textarea id="feeling" class="form-control" rows="4" placeholder="Compartilhe seus sentimentos"></textarea>
+      <button class="btn btn-vanidoya mt-3" onclick="enviarWhatsApp()">Enviar para Vani</button>
+    </div>
+  </div>
+
+  <!-- Modal Compartilhar -->
+  <div class="modal fade" id="shareModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content text-center p-4">
+        <h5 class="modal-title brand-color mb-3">Compartilhe este site</h5>
+        <p>Explore o trabalho espiritual da Sacerdotisa Vani D'Oyá!</p>
+        <input class="form-control" value="https://seusite.com" readonly>
+        <button class="btn btn-vanidoya mt-3" id="link-copy">Copiar Link</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Medicinas da Floresta -->
+  <div class="modal fade" id="forestModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content text-center p-4">
+        <h5 class="modal-title brand-color mb-3">Medicinas da Floresta</h5>
+        <p class="text-muted">Essas medicinas são um presente para todos, mas nem todos estão prontos para elas. Descubra se é seu momento!</p>
+        <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w" class="btn btn-vanidoya">Descubra Agora</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal Pagamento -->
+  <div class="modal fade" id="paymentModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content text-center p-4">
+        <h5 class="modal-title brand-color mb-3">Contribua com a missão</h5>
+        <div class="d-flex justify-content-around">
+          <div>
+            <img src="pix-qrcode.png" alt="PIX" class="img-fluid" style="max-width: 120px">
+            <p><button class="btn btn-vanidoya btn-sm mt-2" id="pix-copy">Copiar PIX</button></p>
+          </div>
+          <div>
+            <img src="lb-qrcode.jpeg" alt="Lightning" class="img-fluid" style="max-width: 120px">
+            <p><button class="btn btn-vanidoya btn-sm mt-2" id="lightning-copy">Copiar Lightning</button></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
