--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container text-center py-5">
-    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width: 140px; border: 3px solid #87CEEB;">
+    <img src="foto-vanidoya.jpg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width: 140px; border: 3px solid #87CEEB;">
     <h1 class="brand-color">Sacerdotisa Vani D'Oyá</h1>
     <p class="lead">Guia Espiritual | Conexão e Transformação</p>
 
