--- a/index.html
+++ b/index.html
@@ -2,29 +2,53 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vani D'Oyá - Conexão Espiritual</title>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <!-- Fonte mística importada via Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container text-center py-5">
-    <img src="foto-vanidoya.jpg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width: 140px; border: 3px solid #87CEEB;">
+    <img src="foto-vanidoya.jpg" alt="Vani D'Oyá" class="rounded-circle mb-3"
+         style="width: 140px; border: 3px solid #FFDAB9;">
     <h1 class="brand-color">Sacerdotisa Vani D'Oyá</h1>
     <p class="lead">Guia Espiritual | Conexão e Transformação</p>
 
     <div class="mb-4">
-      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397', '_blank')"><i class="fab fa-whatsapp fa-2x"></i></a>
-      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn"><i class="fab fa-instagram fa-2x mx-3"></i></a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn"><i class="fas fa-share-alt fa-2x"></i></a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn"><i class="fas fa-leaf fa-2x ms-3"></i></a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn"><i class="fas fa-qrcode fa-2x ms-3"></i></a>
+      <!-- Ícones de redes sociais e ações (cor dos ícones definida no CSS) -->
+      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397','_blank')">
+        <i class="fab fa-whatsapp fa-2x"></i>
+      </a>
+      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn">
+        <i class="fab fa-instagram fa-2x mx-3"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn">
+        <i class="fas fa-share-alt fa-2x"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn">
+        <i class="fas fa-leaf fa-2x ms-3"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn">
+        <i class="fas fa-qrcode fa-2x ms-3"></i>
+      </a>
     </div>
 
-    <button class="btn btn-vanidoya mb-4" onclick="document.getElementById('emergency').classList.toggle('d-none')">Pronto Socorro Espiritual</button>
+    <!-- Botão Pronto Socorro Espiritual -->
+    <button class="btn btn-vanidoya mb-4"
+            onclick="document.getElementById('emergency').classList.toggle('d-none')">
+      Pronto Socorro Espiritual
+    </button>
 
+    <!-- Novos botões adicionados abaixo -->
+    <a href="https://pset.simplybook.me/v2/" class="btn btn-vanidoya mb-2">Marque sua visita</a>
+    <a href="https://embaot333.kpages.online/passaporte-para-escola-de-magia-e-bruxaria-antiga-ordem-triplice-cc7195fe-7eb1-4b13-b337-3281687d5598"
+       class="btn btn-vanidoya mb-4">Cursos</a>
+
+    <!-- Conteúdo do Pronto Socorro Espiritual (sem alteração) -->
     <div id="emergency" class="d-none mx-auto p-4 border rounded shadow-sm" style="max-width: 500px;">
       <h4 class="brand-color">Como você está agora?</h4>
       <input type="range" min="0" max="100" value="50" id="mood" class="form-range">
