--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="container text-center py-4">
+<body><main class="container-fluid">
+    <div class="container text-center py-3">
     <img src="foto-vanidoya.jpg" alt="Vani D'Oyá" class="rounded-circle mb-3"
          style="width: 140px; border: 4px solid #FFDAB9;">
-         <div class="container text-center py-1 glass">
-    <h1 class="brand-color">Sacerdotisa Vani D'Oyá</h1>
-    <p class="lead">Guia Espiritual | Conexão e Transformação</p>
-</div>
-
-    <!-- Botão Pronto Socorro Espiritual -->
-  
-    <div class="d-flex flex-column align-items-center gap-1 py-1">
+         <div class="container text-center py-2 glass">
+    <h5 class="brand-color">Sacerdotisa </h5><h1 class="brand-color">Vani D'Oyá</h1>
+    <h6>Guia Espiritual | Conexão e Transformação</h6>
+</div>  
+    <div class="d-flex flex-column align-items-center gap-2 py-3">
 
     <!-- Novos botões adicionados abaixo -->
     <a href="https://pset.simplybook.me/v2/" class="btn btn-vanidoya">
@@ -32,25 +29,7 @@
        class="btn btn-vanidoya">
     Cursos
   </a>
-<div class="container text-center py-1 glass">    
-<div class="mb-1">
-      <!-- Ícones de redes sociais e ações (cor dos ícones definida no CSS) -->
-      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397','_blank')">
-        <i class="fab fa-whatsapp fa-2x"></i>
-      </a>
-      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn">
-        <i class="fab fa-instagram fa-2x mx-3"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn">
-        <i class="fas fa-share-alt fa-2x"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn">
-        <i class="fas fa-leaf fa-2x ms-3"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn">
-        <i class="fas fa-qrcode fa-2x ms-3"></i>
-      </a>
-    </div></div>
+
   <!-- Modal Compartilhar -->
   <div class="modal fade" id="shareModal" tabindex="-1">
     <div class="modal-dialog">
@@ -95,5 +74,28 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="scripts.js"></script>
+</div>
+</main>
+  <footer>
+    <div class="container text-center py-1 glass">    
+<div class="mb-1">
+      <!-- Ícones de redes sociais e ações (cor dos ícones definida no CSS) -->
+      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397','_blank')">
+        <i class="fab fa-whatsapp fa-2x"></i>
+      </a>
+      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn">
+        <i class="fab fa-instagram fa-2x mx-3"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn">
+        <i class="fas fa-share-alt fa-2x"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn">
+        <i class="fas fa-leaf fa-2x ms-3"></i>
+      </a>
+      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn">
+        <i class="fas fa-qrcode fa-2x ms-3"></i>
+      </a>
+    </div></div>
+  </footer>
 </body>
 </html>
