--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="modal-content text-center p-4">
         <h5 class="modal-title brand-color mb-3">Compartilhe este site</h5>
         <p>Explore o trabalho espiritual da Sacerdotisa Vani D'Oyá!</p>
-        <input class="form-control" value="https://seusite.com" readonly>
+        <input class="form-control" value="https://prontosocorroespiritual.com/" readonly>
         <button class="btn btn-vanidoya mt-3" id="link-copy">Copiar Link</button>
       </div>
     </div>
