--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h5 class="brand-color">Sacerdotisa </h5><h1 class="brand-color">Vani D'Oyá</h1>
     <h6>Guia Espiritual | Conexão e Transformação</h6>
 </div>  
-    <div class="d-flex flex-column align-items-center gap-2 py-3">
+    <div class="d-flex flex-column align-items-center gap-3 py-3">
 
     <!-- Novos botões adicionados abaixo -->
     <a href="https://pset.simplybook.me/v2/" class="btn btn-vanidoya">
@@ -34,8 +34,7 @@
   <div class="modal fade" id="shareModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content text-center p-4">
-        <h5 class="modal-title brand-color mb-3">Compartilhe este site</h5>
-        <p>Explore o trabalho espiritual da Sacerdotisa Vani D'Oyá!</p>
+        <h5 class="modal-title mb-3">Compartilhe este site</h5>
         <input class="form-control" value="https://prontosocorroespiritual.com/" readonly>
         <button class="btn btn-vanidoya mt-3" id="link-copy">Copiar Link</button>
       </div>
@@ -46,7 +45,7 @@
   <div class="modal fade" id="forestModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content text-center p-4">
-        <h5 class="modal-title brand-color mb-3">Medicinas da Floresta</h5>
+        <h5 class="modal-title mb-3">Medicinas da Floresta</h5>
         <p class="text-muted">Essas medicinas são um presente para todos, mas nem todos estão prontos para elas. Descubra se é seu momento!</p>
         <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w" class="btn btn-vanidoya">Descubra Agora</a>
       </div>
@@ -57,7 +56,7 @@
   <div class="modal fade" id="paymentModal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content text-center p-4">
-        <h5 class="modal-title brand-color mb-3">Contribua com a missão</h5>
+        <h5 class="modal-title mb-3">Contribua com a missão</h5>
         <div class="d-flex justify-content-around">
           <div>
             <img src="pix-qrcode.png" alt="PIX" class="img-fluid" style="max-width: 120px">
