--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body><main class="container-fluid">
     <div class="container text-center py-5">
-    <img src="foto-vanidoya.jpg" alt="Vani D'Oyá" class="rounded-circle mb-3"
-         style="width: 140px; border: 4px solid #FFDAB9;">
+    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3"
+         style="width: 200px; border: 4px solid #FFDAB9;"><br>
          <div class="container text-center py-2 glass">
     <h5 class="brand-color">Sacerdotisa </h5><h1 class="brand-color">Vani D'Oyá</h1>
     <h6>Guia Espiritual | Conexão e Transformação</h6>
