--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 </main>
  
 <footer class="site-footer">
- <div class="container text-center py-1 glass">        
 <div class="mb-1">
       <!-- Ícones de redes sociais e ações (cor dos ícones definida no CSS) -->
       <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397','_blank')">
@@ -95,7 +94,7 @@
       <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn">
         <i class="fas fa-qrcode fa-2x ms-3"></i>
       </a>
-    </div></div>
+    </div>
   </footer>
 </body>
 </html>
