mudança de links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="d-flex flex-column align-items-center gap-3 py-3">
 
     <!-- Novos botões adicionados abaixo -->
-    <a href="https://pset.simplybook.me/v2/" class="btn btn-vanidoya">
+    <a href="agendamento/index.html" class="btn btn-vanidoya">
     Marque sua visita
   </a>
-    <a href="https://embaot333.kpages.online/passaporte-para-escola-de-magia-e-bruxaria-antiga-ordem-triplice-cc7195fe-7eb1-4b13-b337-3281687d5598"
+    <a href="cursos/index.html"
        class="btn btn-vanidoya">
     Cursos
   </a>
