--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="d-flex flex-column align-items-center gap-3 py-3">
 
     <!-- Novos botões adicionados abaixo -->
-    <a href="/agendamento" class="btn btn-vanidoya">
+    <a href="https://pset.simplybook.me/v2/#book" class="btn btn-vanidoya">
     Marque sua visita
   </a>
-    <a href="/cursos"
+    <a href="https://cursos.prontosocorroespiritual.com/embaot"
        class="btn btn-vanidoya">
     Cursos
   </a>
