correção de link

--- a/cursos/index.html
+++ b/cursos/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<!--  Build by Klickpages -->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://cursos.prontosocorroespiritual.com/embaot">
-    <title>Redirecionando...</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17266112778"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17266112778');
+</script>
+    <script type="text/javascript" src="//art.pages.hotmart.com/v1/api/pages/external_script/b01f81c4-126c-40f9-a6f5-a3c273e02949?locale=pt-BR"></script>
 </head>
-<body>
-    <p>Redirecionando para cursos...</p>
-    <script>
-        window.location.href = "https://cursos.prontosocorroespiritual.com/embaot";
-    </script>
-</body>
+<body></body>
 </html>
