--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="https://pset.simplybook.me/v2/#book" class="btn btn-vanidoya">
     Marque sua visita
   </a>
-    <a href="https://cursos.prontosocorroespiritual.com/embaot"
+    <a href="cursos/"
        class="btn btn-vanidoya">
     Cursos
   </a>
