--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="https://pset.simplybook.me/v2/#book" class="btn btn-vanidoya">
     Marque sua visita
   </a>
-    <a href="cursos/"
+    <a href="https://prontosocorroespiritual.com/cursos/"
        class="btn btn-vanidoya">
     Cursos
   </a>
