--- a/index.html
+++ b/index.html
@@ -30,14 +30,25 @@
 </div>  
     <div class="d-flex flex-column align-items-center gap-3 py-3">
 
-    <!-- Novos botões adicionados abaixo -->
-    <a href="https://pset.simplybook.me/v2/#book" class="btn btn-vanidoya">
-    Marque sua visita
-  </a>
-    <a href="https://prontosocorroespiritual.com/cursos/"
-       class="btn btn-vanidoya">
-    Cursos
-  </a>
+<!-- BOTÕES DE AÇÃO -->
+<!-- novo: Tarot Avançado -->
+<a href="#"
+   id="btn-tarot"
+   class="btn btn-vanidoya btn-service">Tarot&nbsp;Avançado</a>
+
+<!-- novo: Feitio -->
+<a href="#"
+   id="btn-feitio"
+   class="btn btn-vanidoya btn-service">Feitio</a>
+
+   <a href="https://prontosocorroespiritual.com/cursos/"
+   class="btn btn-vanidoya btn-service">Cursos</a>
+
+   <a href="https://pset.simplybook.me/v2/#book"
+   class="btn btn-vanidoya btn-service">Marque sua visita</a>
+
+
+
 
   <!-- Modal Compartilhar -->
   <div class="modal fade" id="shareModal" tabindex="-1">
