--- a/index.html
+++ b/index.html
@@ -31,24 +31,19 @@
     <div class="d-flex flex-column align-items-center gap-3 py-3">
 
 <!-- BOTÕES DE AÇÃO -->
-<!-- novo: Tarot Avançado -->
 <a href="#"
    id="btn-tarot"
    class="btn btn-vanidoya btn-service">Tarot&nbsp;Avançado</a>
 
-<!-- novo: Feitio -->
 <a href="#"
    id="btn-feitio"
-   class="btn btn-vanidoya btn-service">Feitio</a>
+   class="btn btn-vanidoya btn-service">Feitio Escola</a>
 
    <a href="https://prontosocorroespiritual.com/cursos/"
    class="btn btn-vanidoya btn-service">Cursos</a>
 
    <a href="https://pset.simplybook.me/v2/#book"
    class="btn btn-vanidoya btn-service">Marque sua visita</a>
-
-
-
 
   <!-- Modal Compartilhar -->
   <div class="modal fade" id="shareModal" tabindex="-1">
