--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    class="btn btn-vanidoya btn-service">Feitio Escola</a>
 
    <a href="https://prontosocorroespiritual.com/cursos/"
-   class="btn btn-vanidoya btn-service">Cursos</a>
+   class="btn btn-vanidoya btn-service">Escola de Magia</a>
 
    <a href="https://pset.simplybook.me/v2/#book"
    class="btn btn-vanidoya btn-service">Marque sua visita</a>
