--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- BOTÕES DE AÇÃO -->
 <a href="#"
    id="btn-tarot"
-   class="btn btn-vanidoya btn-service">Curso Avançado Baralho Cigano</a>
+   class="btn btn-vanidoya btn-service">Curso Avançado<br> Baralho Cigano</a>
 
 <a href="#"
    id="btn-feitio"
