incluir pagina baralho

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <div class="d-flex flex-column align-items-center gap-3 py-3">
 
 <!-- BOTÕES DE AÇÃO -->
-<a href="#"
-   id="btn-tarot"
-   class="btn btn-vanidoya btn-service">Curso Avançado<br> Baralho Cigano</a>
+<a href="curso-avancado-baralho-cigano.html"
+    class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
 
 <a href="#"
    id="btn-feitio"
