--- a/curso-avancado-baralho-cigano.html
+++ b/curso-avancado-baralho-cigano.html
@@ -66,7 +66,7 @@
         <h3 class="gold mb-3">Investimento</h3>
         <p class="mb-1">
           💳 6 × R$ 130,00 <span class="d-inline-block d-md-none"><br></span>
-          <span class="small text-muted">(ou à vista no PIX por R$ 690,00)</span>
+          <span class="small text">(ou à vista no PIX por R$ 690,00)</span>
         </p>
 
         <!-- botão de pagamento -->
@@ -83,7 +83,7 @@
         target="_blank" class="gold fw-bold text-decoration-underline">Grupo&nbsp;Vitalício</a> e envie o comprovante.
       </p>
 
-      <p class="mb-0 small text-muted">Por Mãe Vani D’Oyá</p>
+      <p class="mb-0 small text">Por Mãe Vani D’Oyá</p>
     </section>
 
     <!-- botão voltar -->
