--- a/curso-avancado-baralho-cigano.html
+++ b/curso-avancado-baralho-cigano.html
@@ -23,7 +23,7 @@
     <!-- cartão envidraçado com o conteúdo -->
     <section id="curso-bc" class="container glass text-center">
 
-      <h1 class="brand-color mb-3">Curso&nbsp;Avançado<br>Baralho&nbsp;Cigano&nbsp;🔮🗝️</h1>
+      <h1 class="brand-color mb-3">Curso&nbsp;Avançado<br>Baralho&nbsp;Cigano&nbsp;<br>🔮🗝️</h1>
 
       <!-- descrição em duas colunas com ícones -->
       <div class="row text-start g-4">
