inclusao do video

--- a/curso-avancado-baralho-cigano.html
+++ b/curso-avancado-baralho-cigano.html
@@ -68,6 +68,16 @@
           💳 6 × R$ 130,00 <span class="d-inline-block d-md-none"><br></span>
           <span class="small text">(ou à vista no PIX por R$ 690,00)</span>
         </p>
+<!-- Short vertical – autoplay mudo, loop, sem controles -->
+<div class="embed-9x16 my-4">
+  <iframe
+  src="https://www.youtube.com/embed/eJefB-AfmWU?autoplay=1&mute=1&loop=1&playlist=eJefB-AfmWU&controls=1&modestbranding=1&rel=0&playsinline=1"
+  title="Curso Avançado de Baralho Cigano"
+  allow="autoplay; encrypted-media"
+  allowfullscreen>
+</iframe>
+
+</div>
 
         <!-- botão de pagamento -->
         <a href="https://pag.ae/7_Pwp1DCQ" target="_blank"
