--- a/curso-avancado-baralho-cigano.html
+++ b/curso-avancado-baralho-cigano.html
@@ -65,8 +65,8 @@
       <div class="my-4">
         <h3 class="gold mb-3">Investimento</h3>
         <p class="mb-1">
-          💳 6 × R$ 130,00 <span class="d-inline-block d-md-none"><br></span>
-          <span class="small text">(ou à vista no PIX por R$ 690,00)</span>
+          💳 6 × R$ 110,00 <span class="d-inline-block d-md-none"><br></span>
+          <span class="small text">(ou à vista no PIX por R$ 540,00)</span>
         </p>
 <!-- Short vertical – autoplay mudo, loop, sem controles -->
 <div class="embed-9x16 my-4">
@@ -89,7 +89,7 @@
       <!-- instruções finais -->
       <p class="fs-6">
         🎥 As aulas serão <strong>ao vivo no Zoom</strong>.  
-        Para confirmar sua inscrição, entre no nosso <a href="https://chat.whatsapp.com/EXEMPLOGRUPO"
+        Para confirmar sua inscrição, entre no nosso <a href="https://chat.whatsapp.com/BtO98XY3LdN1TFtBDaCWvl?mode=ac_t"
         target="_blank" class="gold fw-bold text-decoration-underline">Grupo&nbsp;Vitalício</a> e envie o comprovante.
       </p>
 
