correção link agendamento

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'G-2KDTRH8GV3');
 </script>
+<link rel="prefetch" href="https://pset.simplybook.me/v2/#book">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vani D'Oyá - Conexão Espiritual</title>
