--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
   gtag('config', 'G-2KDTRH8GV3');
 </script>
-<link rel="prefetch" href="https://pset.simplybook.me/v2/#book">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Vani D'Oyá - Conexão Espiritual</title>
@@ -20,6 +19,15 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
+  <a href="sua-pagina.html" id="meuLink">Ir para a página</a>
+
+<script>
+  document.getElementById('https://pset.simplybook.me/v2/#book').addEventListener('click', function(event) {
+    event.preventDefault(); // Impede o comportamento padrão do link
+    const url = this.href + '?t=' + new Date().getTime(); // Adiciona um timestamp à URL
+    window.location.href = url; // Redireciona para a URL modificada
+  });
+</script>
 </head>
 <body><main class="container-fluid">
     <div class="container text-center py-3">
