--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <a href="curso-avancado-baralho-cigano.html"
     class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
 
-<a href="#"
-   id="btn-feitio"
+<a href="feitio-escola.html"
    class="btn btn-vanidoya btn-service">Feitio Escola</a>
+
 
    <a href="https://prontosocorroespiritual.com/cursos/"
    class="btn btn-vanidoya btn-service">Escola de Magia</a>
