--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <a href="https://prontosocorroespiritual.com/cursos/"
    class="btn btn-vanidoya btn-service">Escola de Magia</a>
 
-   <a href="https://pset.simplybook.me/v2/#book"
+   <a href="https://pset.simplybook.me/v2/"
    class="btn btn-vanidoya btn-service">Marque sua visita</a>
 
   <!-- Modal Compartilhar -->
