--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
 
 <a href="feitio-escola.html"
-   class="btn btn-vanidoya btn-service">Feitio Escola</a>
+   class="btn btn-vanidoya btn-service">Feitio Escola Aya Curandeira</a>
 
 
    <a href="https://prontosocorroespiritual.com/cursos/"
