--- a/feitio-escola.html
+++ b/feitio-escola.html
@@ -71,9 +71,9 @@
   <div class="my-4">
     <h3 class="gold mb-3">Investimento</h3>
     <h5 class="mb-1">
-      💳  R$ 206,00
+      💳  R$ 400,00
     </h5>
-    <a href="https://pag.ae/7_PwaScM3" target="_blank"
+   <a href=//"https://pag.ae/7_PwaScM3" target="_blank"
        class="btn btn-vanidoya btn-lg px-5">
       Garantir minha vaga
     </a>
