--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="modal-content glass p-3 text-center">
       <div class="modal-header border-0">
         <h5 class="modal-title" id="forestModalLabel">Medicinas da Floresta</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>Estas medicinas são presentes ancestrais. Descubra se é seu momento de recebê-las:</p>
@@ -109,7 +109,7 @@
     <div class="modal-content glass p-3 text-center">
       <div class="modal-header border-0">
         <h5 class="modal-title" id="paymentModalLabel">Contribua com a missão</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <img src="pix-qrcode.png" alt="PIX QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
