--- a/feitio-escola.html
+++ b/feitio-escola.html
@@ -73,6 +73,7 @@
     <h5 class="mb-1">
       💳  R$ 400,00
     </h5>
+    <h6>Refeições inclusas</h6>
    <a href=//"https://pag.ae/7_PwaScM3" target="_blank"
        class="btn btn-vanidoya btn-lg px-5">
       Garantir minha vaga
