--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <!-- Open Graph / Twitter -->
   <meta property="og:title"       content="Vani D'Oyá – Conexão Espiritual">
   <meta property="og:description" content="Transforme‑se com magia da natureza, oráculos e medicinas da floresta.">
-  <meta property="og:image"      content="https://prontosocorroespiritual.com/foto-vanidoya.jpeg">
+  <meta property="og:image"      content="https://prontosocorroespiritual.com/foto-vanidoya.webp">
   <meta property="og:url"        content="https://prontosocorroespiritual.com/">
   <meta property="og:type"       content="website">
 
   <!-- JSON‑LD -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","name":"Vani D'Oyá","url":"https://prontosocorroespiritual.com/","image":"https://prontosocorroespiritual.com/foto-vanidoya.jpeg","jobTitle":"Guia Espiritual","sameAs":["https://instagram.com/sacerdotisa_vanidoya","https://wa.me/5521972280397"]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","name":"Vani D'Oyá","url":"https://prontosocorroespiritual.com/","image":"https://prontosocorroespiritual.com/foto-vanidoya.webp","jobTitle":"Guia Espiritual","sameAs":["https://instagram.com/sacerdotisa_vanidoya","https://wa.me/5521972280397"]}</script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
 <body>
 <main class="container-fluid">
   <div class="container text-center py-3">
-    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width:200px;border:4px solid #FFDAB9;" loading="lazy">
+    <img src="foto-vanidoya.webp" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width:200px;border:4px solid #FFDAB9;" loading="lazy">
 
     <div class="container text-center py-2 glass">
       <h5 class="brand-color">Sacerdotisa</h5>
@@ -112,9 +112,9 @@
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img src="pix-qrcode.png" alt="PIX QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
+        <img src="pix-qrcode.webp" alt="PIX QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
         <button id="pix-copy" class="btn btn-vanidoya mb-3" type="button">Copiar chave PIX</button>
-        <img src="lb-qrcode.jpeg" alt="Lightning QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
+        <img src="lb-qrcode.webp" alt="Lightning QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
         <button id="lightning-copy" class="btn btn-vanidoya" type="button">Copiar Lightning</button>
       </div>
     </div>
