--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
     <!-- BOTÕES PRINCIPAIS -->
     <div class="d-flex flex-column align-items-center gap-3 py-3">
+      <a href="sagrada‑feminina.html" class="btn btn-vanidoya btn-lg px-5">
+  Sagrada Feminina
+</a>
       <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
       <a id="btn-feitio" href="feitio-escola.html"                class="btn btn-vanidoya btn-service">Feitio Escola<br>Aya Curandeira</a>
       <a href="https://prontosocorroespiritual.com/cursos/" class="btn btn-vanidoya btn-service">Escola de Magia</a>
